--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
+  flutter_svg: ^0.19.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
