--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
-  flutter_svg: ^0.19.1
-  http: ^0.12.2
-  shared_preferences: ^0.5.12+4
+  flutter_svg: ^0.19.3
+  http: ^0.13.1
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
