--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
-  flutter_svg: ^0.19.3
+  flutter_svg: ^0.21.0+1
   http: ^0.13.1
   shared_preferences: ^2.0.5
 
