Update README.md and add screenshots

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: neo_weather
-description: A new Flutter project.
+description: Flutter weather app for android & ios device.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
